--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li>
+				<a href="#Home"> Home </a>
+			</li>
+			<li>
+				<a href="#about"> About us </a>
+			</li>
+			<li>
+				<a href="#Contact"> Contact Us </a>
+			</li>
+		</ul>
+	</nav>
+	<h1>
+		 3 random images
+	</h1>
+	<img src="https://picsum.photos/id/123/200/300" alt="Random image"/>
+		<img src="https://picsum.photos/id/124/200/300" alt="Random image"/>
+	<img src="https://picsum.photos/id/125/200/300" alt="Random image"/>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
